# interactive_math_paper

./: .gitignore  Readme.md  pyproject.toml  test.html
assets/css/: amsthm.css  math_mode.css  tex.css
assets/js/: tex.js
docs/: make.sh
docs/html/: index.html  interactive_math_paper.html  search.js
docs/html/example_papers/: tree_decompositions_and_many-sided_separations.html
docs/html/interactive_math_paper/: visitors.html
docs/templates/: index.html.jinja2  module.html.jinja2
html_examples/: tabrish_paper.html  tree_decompositions_and_many-sided_separations.html
src/: converter.py
src/interactive_math_paper/: __init__.py  amsmath.py  amsthm.py  cli.py  conversion.py  converter.py  data.py  implementation.py  tex.py  tex_soup_test.py
src/interactive_math_paper/visitors/: __init__.py  amsmath.py  amsthm.py  math_mode.py  tex.py
texfiles/: main.tex  test.tex  tree_decompositions_and_many-sided_separations.tex
