[project]
name = "interactive-math-paper"
version = "0.0.4"
requires-python = ">=3.12"
authors = [
    {name = "Tabrish"},
    {name = "Hanno von Bergen"},
]
dependencies = [
    "texsoup>=0.3.1",
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__",
]
venvPath = "."
venv = ".venv"

[project.scripts]
convert-paper = "interactive_math_paper:main_cli"

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
